fix error code and add delete func to ToDo
